# needle_llama

./: CMakeLists.txt  README.md
apps/story_llama/: infer.py  load_params.py  model.py
encap/: encap_tensor.cu
encap/include/: encap_tensor.cuh  tensor_float.cuh  tensor_half.cuh
include/: common.hpp  needle_tensor.cuh  needle_util.cuh  optimize.cuh  tensor.cuh
include/backend/: base_array.hpp  base_tensor.hpp  cpu_backend.hpp  cpu_tensor.hpp  cuda_backend.cuh  cuda_tensor.hpp  cuda_util.cuh
include/init/: init_basic.cuh  initial.hpp
include/nn/: function.cuh  linear.cuh  module_list.cuh  nn_conv2d.cuh  nn_embedding.cuh  nn_module.cuh
include/ops/: generic_op.cuh  ops_math.hpp  ops_util.cuh
include/ops/bp/: as_stride.cuh  broadcast.cuh  conv2d.cuh  dilate.cuh  embedding.cuh  ew.cuh  exp.cuh  flip.cuh  log.cuh  logsumexp.cuh  mask.cuh  matmul.cuh  max.cuh  neg.cuh  padding.cuh  permute.cuh  relu.cuh  reshape.cuh  rms_norm.cuh  rotary.cuh  (+10 more)
llama_pytorch/: export.py  export.sh  inference.py  model.py
python/: needle_python.py
test_python/: RoEmd.py  batchGemm.py  module.py  tensor.py  test_arange.py  test_transpose.py
unitest/: test_fp16.py
unittest/: test_cuda_add.py  test_cuda_argmax.py  test_cuda_as_strided.py  test_cuda_conv2d.py  test_cuda_dilate.py  test_cuda_embedding.py  test_cuda_eq.py  test_cuda_flip.py  test_cuda_init.py  test_cuda_matmul.py  test_cuda_module.py  test_cuda_padding.py  test_cuda_rms.py  test_cuda_rotary.py  test_cuda_setitem.py  test_cuda_silu.py  test_cuda_softmax.py  test_cuda_summation.py  test_cuda_where.py  test_tonumpy.py
